# FacialRecognition

./: CMakeLists.txt  Directory.cpp  Directory.h  Image.cpp  Image.h  ImageManager.cpp  ImageManager.h  ImagePanel.cpp  ImagePanel.h  README.md  VideoPanel.cpp  VideoPanel.h  WebSocketConnector.cpp  WebSocketConnector.h  main.cpp  main.h  recognitionProcess.cpp  recognitionProcess.h  wxMainFrame.cpp  wxMainFrame.h
